Issue #150 - Amended spacing on form to reduce whitespace - Amended required fields to match current form

--- a/app/assets/stylesheets/spacing.scss
+++ b/app/assets/stylesheets/spacing.scss
@@ -3,10 +3,18 @@
 .add-margin {
   &.top {
     margin-top: $spacing-unit;
+
+    &.half {
+      margin-top: calc( #{ $spacing-unit} / 2);
+    }
   }
 
   &.bottom {
     margin-bottom: $spacing-unit;
+
+    &.half {
+      margin-bottom: calc( #{ $spacing-unit} / 2);
+    }
   }
 }
 
